src/test/deca/context/valid/created/miscellaneous/assign_int_float.deca
// Description :
//    test  assign entre un int et un float
//
// Resultats :
//		Ok


{
int a = 1;
float b;
b = a;
}
