src/test/deca/context/invalid/created/object/equals_float_float.deca
// Description :
//    test equals entre un float et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
float a;
float b;
int c = a.equal(b);
}
